assets/_table.scss
.table {
	.checkbox-column {
		width: 14px;
	}

	.display-column {
		width: 40px;
	}

	.price-column {
		width: 200px;
	}

	.info-column {
    text-align: center;
		width: 50px;
	}

	.image-column {
    text-align: center;
		width: 50px;
	}

	.status-column {
		width: 150px;	
	}

	.live-column {
		width: 50px;
	}

	.visible-column {
		width: 50px;
	}

  .action-column {
    width: 50px;
    text-align: center;
  }

	.modified-column {
		width: 88px;
	}

  .submitted-column {
    width: 92px;
  }

  .width_date {
    width: 160px;
  }

  .width_number {
    width: 70px;
  }

  .width_action_wide {
    width: 150px;
  }

  .width_120 {
    width: 120px;
  }

  tbody .action-column{
    width: 60px;
    padding-top: 14px;
    padding-bottom: 14px;
  }
}

//Table section
.table-section {
  margin-top:  30px;

  // Set border-table's color to $color-grey
  table.table.table-curved.product-list-table {
    border-color: $color-grey;
  }

  table > tbody > tr > td, table > thead > tr > th {
    border-color: $color-grey;
  }
  // End setting border color
  
  
  .table > tbody > tr:first-child > td {
    border-top: none;
  }

  // Override Bootstrap's th width that set to 2px
  .table > thead > tr > th {
    border-bottom-width : 1px;
  }

  .table > tbody > tr:hover{
    background: $color-light-grey;
  }

  .table {
    border: solid 1px $color-grey;
  }

  .caret-grey {
    color:  $color-grey;
  }

  .icon-size-18px {
    font-size: 18px;
  }

  .red-message {
    color:  $color-red;
  }

  .green-message {
    color:  $color-green;
  }

  .grey-message {
    color:  $color-grey;
  }

  .eye-icon {
    font-size: 20px;
  }

  .display-column {
    img {
      max-height: 40px;
      max-width: 40px;
      border-radius:  3px;
    }
  }

  // Add underline to header link
  a.header-link {
    color: $color-black;
      span.active-underline {
        border-bottom:  2px solid $color-soft-blue;
        padding-bottom: 4px;
      }
    &:focus {
      text-decoration: none;
    }
  }

  .table-curved {
    // overflow:hidden;
    border-collapse:separate;
    // border: solid $color-grey 1px;
    border-radius: 3px;
  }

  .table > thead > tr > th {
    padding-top: 6px;
    padding-bottom: 4px;
    font-weight: normal;
  }

  .table > tbody > tr > td {
    vertical-align: middle;
  }

  td.info-column, td.image-columnm, td.live-column, td.visible-column {
    text-align: center;
  }

  .table-checkbox {
    margin-top: 0px;
    margin-bottom: 0;
  }

  .table-head {
    background: $color-light-blue;
    color: $color-black;
    border-top-left-radius: 10px;
  }
}

// Page navigation section
.page-navigation {
  float: right;

  .grey-chevron {
    color:  $color-grey
  }

  .blue-chevron {
    color:  $color-theme
  }

  .view-page-separator {
    border-left: solid 1px $color-grey;
    padding-left: 15px;
  }
}

// Filter Section

.filter-section {

  .filter-container {
    position: relative;
    padding: 12px 17px 12px;
    margin-top: 20px;
    border-color: $color-grey;
    border-style: solid;
    border-width: 1px;
    border-radius:  4px;
  }

  .filter-container-input {
    padding: 12px 17px 12px;
  }

  .filter-seperator {
    text-decoration: none;
    cursor: pointer;
    color:  $color-grey;
    border-left: solid 1px $color-grey;
    padding-left: 9px;
    margin-left: 9px;
  }

  .filter-first-option {
    text-decoration: none;
    cursor: pointer;
    color:  $color-dark-grey;
    margin-left: 20px;
  }

  .filter-active {
    color:  $color-black;
  }

  .filter-checkbox{
    float: right;
    input{
      margin-top: 0px;
      margin-right: 6px;
    }
  }
}

.filter-section.filter-input {
  padding-left: 170px;
}

//Page body: Search section
.search-section-wrapper {
  margin-top: 30px;

  .search-section {
    padding-left: 15px;
    padding-right: 15px;
    float: left;
  }

  .section-action {
    width: 280px;
    .body-dropdown-button{
      border-top-right-radius: 0px;
      border-bottom-right-radius: 0px;
    }
  }

  .section-search {
    width: 410px;
  }

  .search-section.section-filter {
    float: right;
  }

  .search-section .btn-white {
    height: 30px;
  }

  .advance-search{
    padding-left: 0px;
    .btn-white{
      width: 135px;
    }
  }

  .body-dropdown-button {
    height: 30px;
    width: 180px;

    .dropdown-text {
      width: 135px;
      display: inline-block;
    }
  }

  .dropdown-text {
    text-align: left;
  }

  .search-box {
    height: 30px;
  }

  .checkbox-wrapper {
    margin-top: 5px;
  }
}
.product-search-section {
  .search-section-wrapper {
    margin-top: 0;

    .search-section {
      padding-left: 0;
    }
  }
}


.table.ah-table {
  > thead > tr > th {
    border-bottom: 1px solid $color-grey;
    &, > * {
      vertical-align: middle;
    }
  }

  > tbody > tr > td {
    border-top: none;
  }

  &.ah-table-extra-padding {
    > tbody > tr > td {
      padding-top: 20px;
      padding-bottom: 20px;
    }
  }

  &.ah-table-line {
    > tbody > tr:first-child > td {
      border-top: none;
    }

    > tbody > tr > td {
      border-top: 1px solid $color-grey;
    }    
  }
  
  margin-bottom: 0;
}

.table {
  .column-text-ellipsis {
    max-width: 0;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
  }
}

